--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.2'
-
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -41,5 +42,5 @@ project.ext {
     libRetrofitAdapter = "com.squareup.retrofit2:adapter-rxjava:${retrofitVersion}"
     libOkHttpLoggingInterceptor = "com.squareup.okhttp3:logging-interceptor:${okHttpVersion}"
 
-    libGlide = "com.github.bumptech.glide:glide:${glideVersion}";
+    libGlide = "com.github.bumptech.glide:glide:${glideVersion}"
 }
