添加查看大图功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
             </intent-filter>
         </activity>
         <activity android:name="com.zero.photopicklib.ui.PickerActivity"/>
+        <activity android:name="com.zero.photopicklib.ui.PicPagerActivity"/>
     </application>
 
 </manifest>
