--- a/photopicklib/build.gradle
+++ b/photopicklib/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
-version = "0.1.1"   //版本号，以后每次更新library都得更改
+version = "0.2.1"   //版本号，以后每次更新library都得更改
 
 android {
     compileSdkVersion 23
@@ -24,6 +24,9 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+
+    compile 'com.nineoldandroids:library:2.4.0'
+
     compile rootProject.ext.libSupportAppcompat
     compile rootProject.ext.libSupportDesign
     compile rootProject.ext.libSupportV4
