--- a/photopicklib/build.gradle
+++ b/photopicklib/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
-version = "0.2.1"   //版本号，以后每次更新library都得更改
+version = "0.2.5"   //版本号，以后每次更新library都得更改
 
 android {
     compileSdkVersion 23
@@ -74,6 +74,13 @@ task sourcesJar(type: Jar) {
     classifier = 'sources'
 }
 task javadoc(type: Javadoc) {
+    options {
+        failOnError = false
+        encoding "UTF-8"
+        docEncoding "UTF-8"
+        charSet "UTF-8"
+        linkSource true
+    }
     source = android.sourceSets.main.java.srcDirs
     classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
 }
