修改沉浸状态栏实现，兼容性更好

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,12 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.3.0'
-    compile project(':photopicklib')
+    compile project(path: ':photopicklib')
+
+    compile rootProject.ext.libSupportAppcompat
+    compile rootProject.ext.libSupportDesign
+    compile rootProject.ext.libSupportV4
+    compile rootProject.ext.libRxAndroid
+    compile rootProject.ext.libRxJava
+    compile rootProject.ext.libGlide
 }
