--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,5 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile rootProject.ext.libSupportAppcompat
-    compile 'com.zero:photopicklib:0.3.2'
+    compile project(':photopicklib')
 }
